# Unified-Agent-Framework

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Semantic-agent_framework.py  Unified-agent_framework.py  Unified_agent_framework.py  demo_unified_agent.py  demo_v5.py  demo_v6.py  pyproject.toml  readme.md  requirements.txt  test_all_scenarios.py  test_full_verification.py  test_new_modules.py  test_real_scenarios.py  test_security_guardrails.py  test_unified_agent.py  test_v35_scenarios.py  test_v40_all_scenarios.py
_legacy/: README_v41.md  demo_unified_agent.py  test_v41_all_scenarios.py  test_v5_all_scenarios.py
_legacy/unified_agent/: Unified_agent_framework.py  __init__.py  a2a_bridge.py  adapter.py  ag2_bridge.py  agent_identity.py  agent_store.py  agent_triggers.py  agents.py  browser_use.py  config.py  crewai_bridge.py  deep_research.py  durable_agent.py  evaluation.py  events.py  exceptions.py  extended_thinking.py  framework.py  google_adk_bridge.py  hooks.py  image_generation.py  interfaces.py  memory.py  middleware.py  ms_agent_bridge.py  observability.py  open_weight.py  openai_agents_bridge.py  orchestration.py  persistent_memory.py  prompt_cache.py  responses_api.py  security_guardrails.py  sk_agent_bridge.py  tracer.py  universal_bridge.py  utils.py  video_generation.py  workflow.py
_legacy/unified_agent_v5/: __init__.py  callback.py  runner.py  tools.py
_legacy/unified_agent_v5/engines/: base.py  crewai_engine.py
_legacy/unified_agent_v5/plugins/: __init__.py
test_memory/test-agent/: AGENTS.md  MEMORY.md  SOUL.md  USER.md
unified_agent/: __init__.py  a2a_bridge.py  adapter.py  ag2_bridge.py  agent_store.py  agent_tool.py  agents.py  compaction.py  concurrent.py  config.py  crewai_bridge.py  durable_agent.py  evaluation.py  events.py  exceptions.py  extended_thinking.py  extensions.py  framework.py  google_adk_bridge.py  hooks.py  image_generation.py  interfaces.py  mcp_workbench.py  memory.py  models.py  ms_agent_bridge.py  open_weight.py  openai_agents_bridge.py  orchestration.py  persistent_memory.py  prompt_cache.py  responses_api.py  reward.py  security_guardrails.py  session_tree.py  sk_agent_bridge.py  skills.py  structured_output.py  tools.py  tracer.py  (+4 more)
unified_agent_v5/: README.md  config.py  memory.py  types.py
unified_agent_v5/engines/: __init__.py  direct.py  langchain_engine.py
unified_agent_v6/: __init__.py  agents.py  config.py  middleware.py  observability.py  tools.py  types.py
